--- a/index.html
+++ b/index.html
@@ -33,22 +33,22 @@
     <section id="loja" class="loja">
         <h2>Loja Online</h2>
         <div class="product">
-            <img src="img/camisa.jpg" alt="Camisa de Alfaiataria Branca">
+            <img src="5ab985bd1f56a030da5049b5806f1e4f.jpg" alt="Camisa de Alfaiataria Branca">
             <p>Camisa de Alfaiataria Branca - $48,99</p>
             <button class="btn">Adicionar ao Carrinho</button>
         </div>
         <div class="product">
-            <img src="img/saia.jpg" alt="Saia Plissada Midi">
-            <p>Saia Plissada Midi - $15,99</p>
+            <img src="f023cffa9a5dee9ec7c1d0fe52a8e1b4.jpg" alt="Saia Plissada Midi">
+            <p>Saia Plissada Midi - $20,99</p>
             <button class="btn">Adicionar ao Carrinho</button>
         </div>
         <div class="product">
-            <img src="img/VESTIDO.jpg" alt="VESTIDO">
+            <img src="23900d2068aa2c66572907aa9b4f2fd7.jpg" alt="VESTIDO">
             <p>VESTIDO - $15,99</p>
             <button class="btn">Adicionar ao Carrinho</button>
         </div>
         <div class="product"></div>
-            <img src="img/BLAZER DE ALFAIATARIA.jpg" alt="BLAZER DE ALFAIATARIA">
+            <img src="c615c67618dba6c47b2edd7cccc24b2f.jpg" alt="BLAZER DE ALFAIATARIA">
             <p>BLAZER DE ALFAIATARIA - $50,00</p>
             <button class="btn">Adicionar ao Carrinho</button>
         </div>
