--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <p>VESTIDO - $15,99</p>
             <button class="btn">Adicionar ao Carrinho</button>
         </div>
-        <div class="product"></div>
+        <div class="product">
             <img src="c615c67618dba6c47b2edd7cccc24b2f.jpg" alt="BLAZER DE ALFAIATARIA">
             <p>BLAZER DE ALFAIATARIA - $50,00</p>
             <button class="btn">Adicionar ao Carrinho</button>
