--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <section class="hero">
         <h1>Descubra um mundo de estilo e conforto na R&D Modas!</h1>
         <p>Aqui você encontra as últimas tendências da moda, com peças que combinam com o seu jeito de ser.</p>
+        <img src="" alt="" class="hero__imagem">
         <a href="#loja" class="btn">Loja Online</a>
     </section>
 
