--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
     <header>
         <nav>
             <ul>
-                <li><a href="#">Home</a></li>
+                <li><a href="#hero">Home</a></li>
                 <li><a href="#">Sobre</a></li>
-                <li><a href="#">Loja</a></li>
-                <li><a href="#">Contato</a></li>
+                <li><a href="#loja">Loja</a></li>
+                <li><a href="#contato">Contato</a></li>
             </ul>
         </nav>
     </header>
 
-    <section class="hero">
+    <section id="hero" class="hero">
         <h1>Descubra um mundo de estilo e conforto na R&D Modas!</h1>
         <p>Aqui você encontra as últimas tendências da moda, com peças que combinam com o seu jeito de ser.</p>
         <img src="montar-uma-vitrine.jpg" alt="" class="hero__imagem">
