--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <nav>
             <ul>
                 <li><a href="#hero">Home</a></li>
-                <li><a href="#">Sobre</a></li>
+                <li><a href="#sobre">Sobre</a></li>
                 <li><a href="#loja">Loja</a></li>
                 <li><a href="#contato">Contato</a></li>
             </ul>
