--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     <section id="sobre" class="sobre">
         <h2>Sobre a R&D Modas</h2>
-        <p>R&D Modas é mais do que apenas uma loja de roupas; é um universo de possibilidades para expressar seu estilo único. Aqui, você encontrará uma vasta coleção de peças para todas as ocasiões, desde o casual chic até os looks mais sofisticados para eventos especiais.</p>
+        <p class="textosobre">R&D Modas é mais do que apenas uma loja de roupas; é um universo de possibilidades para expressar seu estilo único. Aqui, você encontrará uma vasta coleção de peças para todas as ocasiões, desde o casual chic até os looks mais sofisticados para eventos especiais.</p>
     </section>
 
     <section id="loja" class="loja">
