--- a/index.html
+++ b/index.html
@@ -27,9 +27,11 @@
     </section>
 
     <section id="sobre" class="sobre">
+        <div>
         <h2>Sobre a R&D Modas</h2>
         <p class="textosobre">R&D Modas é mais do que apenas uma loja de roupas; é um universo de possibilidades para expressar seu estilo único. Aqui, você encontrará uma vasta coleção de peças para todas as ocasiões, desde o casual chic até os looks mais sofisticados para eventos especiais.</p>
-    </section>
+    </div>
+ </section>
 
     <section id="loja" class="loja">
         <h2>Loja Online</h2>
